tests/correctness/diff_width_test.expect
---CODE---
1
---STDERR---
Stage 'futil' had a non-zero exit code.
--------------- stderr ---------------
Error: 
12 |        add1 = prim fixed_p_std_add_dbit(8, 6, 2, 5, 3, 9);
   |                    ^^^^^^^^^^^^^^^^^^^^ No value passed in for parameter: p_width
which is used here:
827 |primitive fixed_p_std_add_dbit[width, int_width1, fract_width1, int_width2, fract_width2, out_width] (left: p_width, right: p_width) ->(out: p_out_width){
    |                                                                                                            ^^^^^^^ 

